--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^1.4.1",
+    "@clerk/clerk-sdk-node": "^5.0.18",
     "@clerk/nextjs": "^5.2.6",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-separator": "^1.1.0",
